--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -58,8 +58,7 @@
 				</div>
 				<ul>
 					<li id="twitter-button"><a href="http://twitter.com/lukencode" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF">Follow @lukencode</a></li>
-					<li> <a href='/about'>About</a> </li>					
-					<li> <a href='/contact'>Contact</a> </li>
+					<li> <a href='/about.html'>About</a> </li>		
 					<li id="twitter-text"><a href="http://twitter.com/lukencode" >@lukencode</a></li>
 					<li>
 						<a href="/atom.xml">
