--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,11 @@ layout: layout
 		{{ content }}
 	</article>
 </div>
+
+<div id="share">
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="lukencode" data-size="lukencode" data-related="jobfork">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 	
 <div id="page-navigation"> 
 	<div class="left"> {% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&larr; {{page.previous.title}}</a> {% endif %} </div> 
