--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -85,7 +85,7 @@
 				</ul>
 				
 				<div class="jobfork">
-					<h4><a href="http://jobfork.com.au" target="_blank">JobFork.com.au</a></h4>
+					<h4><a href="http://jobfork.com.au/?utm_source=lukencode&utm_medium=sidebar&utm_campaign=blogs" target="_blank">JobFork.com.au</a></h4>
 					<p>
 						Awesome job board for Australian developers - built by me.
 					</p>
