--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>lukencode | {{ page.title }}</title>
+	<title>{{ page.title }}</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="/img/favicon.ico">
