--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -93,7 +93,7 @@
 				</ul>
 				
 				<div class="jobfork">
-					<h4><a href="pollfu.com/?utm_source=lukencode&utm_medium=sidebar&utm_campaign=blogs" target="_blank">Pollfu - Online Poll Creator</a></h4>
+					<h4><a href="http://pollfu.com/?utm_source=lukencode&utm_medium=sidebar&utm_campaign=blogs" target="_blank">Pollfu - Online Poll Creator</a></h4>
 					<p>
 						Create and share online polls - built by me.
 					</p>
