--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -43,13 +43,7 @@
   })();
 
 </script>
-
-<!-- HitTail Code -->
-<script type="text/javascript">
-	(function(){ var ht = document.createElement('script');ht.async = true;
-	  ht.type='text/javascript';ht.src = '//94180.hittail.com/mlt.js';
-	  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ht, s);})();
-</script>						
+					
 
 </head>		
 	
@@ -93,7 +87,7 @@
 				</ul>
 				
 				<div class="jobfork">
-					<h4><a href="http://pollfu.com/?utm_source=lukencode&utm_medium=sidebar&utm_campaign=blogs" target="_blank">Pollfu - Online Poll Creator</a></h4>
+					<h4><a href="http://pollfu.com?utm_source=lukencode&utm_medium=sidebar&utm_campaign=blogs" target="_blank">Pollfu - Online Poll Creator</a></h4>
 					<p>
 						Create and share online polls - built by me.
 					</p>
