clean up plus link to lukelowrey.com

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -54,7 +54,7 @@
 				<h1>
 					<a href="/" title="lukencode" rel="home"></a>
 				</h1>
-				<div id="site-description">code first, ask questions later</div>
+				<!-- <div id="site-description">code first, ask questions later</div> -->
 			</hgroup>			
 		</header>
 								
@@ -63,11 +63,11 @@
 				<div class="info">
 					<h4>Author</h4>	
 					
-					<img class="grav" src='http://www.gravatar.com/avatar/7c9b7fb193d0e6b92186b731c6f2eb74' alt="Luke Lowrey" />
+					<img class="grav" src='/img/photo-min.png' alt="Luke Lowrey" />
 					
 					<div class="about">
 						<strong>Luke Lowrey</strong>
-						<p>I drink beer and build web and mobile apps (in that order).</p>
+						<p>Software development team manager (and developer!) specialising in web applications.</p>
 					</div>
 				</div>
 				<div class="short-info">
@@ -75,7 +75,7 @@
 				</div>
 				<ul>
 					<li id="twitter-button"><a href="http://twitter.com/lukencode" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF">Follow @lukencode</a></li>
-					<li> <a href='/about.html'>About</a> </li>	
+					<li> <a href='http://lukelowrey.com'>lukelowrey.com</a> </li>	
 					<li id="twitter-text"><a href="http://twitter.com/lukencode" >@lukencode</a></li>
 					<li> <a href='https://github.com/lukencode'>GitHub</a></li>
 					<li>
