--- a/css/app.css
+++ b/css/app.css
@@ -1,28 +1,7 @@
-﻿@font-face {
-    font-family: 'RobotoRegular';
-    src: url('/font/Roboto-Regular-webfont.eot');
-    src: url('/font/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/font/Roboto-Regular-webfont.woff') format('woff'),
-         url('/font/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('/font/Roboto-Regular-webfont.svg#RobotoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'RobotoLight';
-    src: url('../font/Roboto-Light-webfont.eot');
-    src: url('../font/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/Roboto-Light-webfont.woff') format('woff'),
-         url('../font/Roboto-Light-webfont.ttf') format('truetype'),
-         url('../font/Roboto-Light-webfont.svg#RobotoLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+﻿@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
 
 body {
-    font-family: "Segoe UI", "Segoe WP", "Helvetica Neue", 'RobotoRegular', sans-serif;
-    /*"Segoe UI Light", "Helvetica Neue", 'RobotoLight', "Segoe UI", "Segoe WP", sans-serif;*/
+    font-family: "Roboto", "Segoe UI", "Segoe WP", "Helvetica Neue", sans-serif;
 }
 
 p {
@@ -55,7 +34,6 @@ img {
 }
 
     #info h1 {
-        font-family:"Segoe UI Light", "Helvetica Neue", 'RobotoLight', "Segoe UI", "Segoe WP", sans-serif;
         font-weight:bold;
         font-size:18px;
         margin:20px 0;
@@ -100,7 +78,6 @@ img {
     }
 
         #details .feature .desc h3 {
-            font-family:"Segoe UI Light", "Helvetica Neue", 'RobotoLight', "Segoe UI", "Segoe WP", sans-serif;
             font-size: 18px;
             color: #858585;
             text-transform:uppercase;
