--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -63,7 +63,7 @@
 				<div class="info">
 					<h4>Author</h4>	
 					
-					<img class="grav" src='/img/photo-min.png' alt="Luke Lowrey" />
+					<img class="grav" src='/img/photo-min.png' alt="Luke Lowrey" style="max-width: 120px" />
 					
 					<div class="about">
 						<strong>Luke Lowrey</strong>
