--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -68,6 +68,10 @@
 					<div class="about">
 						<strong>Luke Lowrey</strong>
 						<p>Software development team manager (and developer!) specialising in web applications.</p>
+						
+						<p>
+						 Founder of <a href="https://austechjobs.com.au">austechjobs.com.au</a> an Australian tech job board focusing on high quality jobs and candidates.	
+						</p>
 					</div>
 				</div>
 				<div class="short-info">
