--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,8 @@
 ---
-layout: layout
+layout: default
 ---
 
-<div id="post">
-	<h1> {{page.title}} </h1>
-	<div class="date">{{ post.date | date: "%d %B, %Y" }}</div>
-	
-	<article>
-		{{ content }}
-	</article>
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
 </div>
