--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,3 +23,24 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+
+<div class="comments">
+  <div id="disqus_thread"></div>
+<script>
+
+  var disqus_config = function () {
+  this.page.url = http://lukencode.com{{ page.url }};  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = {{ page.id }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = 'https://lukencode.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  
+</script>
+
+</div>
