--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,8 +30,8 @@ layout: default
 <script>
 
   var disqus_config = function () {
-  this.page.url = http://lukencode.com{{ page.url }};  // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = {{ page.id }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  this.page.url = 'http://lukencode.com{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
 
   (function() { // DON'T EDIT BELOW THIS LINE
@@ -42,5 +42,6 @@ layout: default
   })();
   
 </script>
+  <script id="dsq-count-scr" src="//lukencode.disqus.com/count.js" async></script>
 
 </div>
