--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
----
-layout: default
+--- 
+layout: default 
 ---
 
 <div class="post">
@@ -8,25 +8,30 @@ layout: default
   {{ content }}
 </div>
 
+<div class="message">
+  👋 Are you an 🇦🇺 Australian developer or IT professional? 
+  Go check out my site <a href="https://austechjobs.com.au">Australian Technology Jobs - a Premium developer and IT job board</a> 
+  and find awesome Australian dev jobs (and people).
+</div>
 
 
 <div class="comments">
   <div id="disqus_thread"></div>
-<script>
+  <script>
 
-  var disqus_config = function () {
-  this.page.url = 'http://lukencode.com{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-  };
+    var disqus_config = function () {
+      this.page.url = 'https://lukencode.com{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
 
-  (function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = 'https://lukencode.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
-  })();
-  
-</script>
+    (function () { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://lukencode.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+
+  </script>
   <script id="dsq-count-scr" src="//lukencode.disqus.com/count.js" async></script>
 
 </div>
@@ -35,15 +40,14 @@ layout: default
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
+    <li>
+      <h3>
+        <a href="{{ post.url }}">
+          {{ post.title }}
+          <small>{{ post.date | date_to_string }}</small>
+        </a>
+      </h3>
+    </li>
     {% endfor %}
   </ul>
 </div>
-
