removed disqus, added twitter

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,27 +14,10 @@ layout: default
   and find awesome Australian dev jobs (and people).
 </div>
 
-
-<div class="comments">
-  <div id="disqus_thread"></div>
-  <script>
-
-    var disqus_config = function () {
-      this.page.url = 'https://lukencode.com{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-
-    (function () { // DON'T EDIT BELOW THIS LINE
-      var d = document, s = d.createElement('script');
-      s.src = 'https://lukencode.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-
-  </script>
-  <script id="dsq-count-scr" src="//lukencode.disqus.com/count.js" async></script>
-
+<div style="padding-bottom:3px;font-weight:600">
+    Questions or comments? Follow me on twitter!
 </div>
+<a href="https://twitter.com/lukencode?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-dnt="true">Follow @lukencode</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <div class="related">
   <h2>Related Posts</h2>
